# Tr8655Vst

./: .gitignore  CLAUDE_CODE_BUILD_PLAN.txt  CLAUDE_CODE_PROMPT.txt  CMakeLists.txt
Figma Code/TR-8655/: README.md  index.html  package.json  vite.config.ts
Figma Code/TR-8655/src/: App.tsx  index.css
Figma Code/TR-8655/src/components/: BassPlugin.tsx  Knob.tsx  Visualizer.tsx
Figma Code/TR-8655/src/imports/: AnimationFirst.tsx  AnimationFourth.tsx  AnimationSecond.tsx  AnimationThird-2-95.tsx  AnimationThird.tsx  svg-dm0ts9195z.ts  svg-ed8u3ibrho.ts  svg-uffgn.tsx  svg-vfob3.tsx  svg-yez0mwy52i.ts
Release/TR-8655.vst3/Contents/Resources/: moduleinfo.json
TR8655-Assets/: positions.txt
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/Components/: CustomKnob.cpp  CustomKnob.h  PresetSelector.cpp  PresetSelector.h  VUMeter.cpp  VUMeter.h  Visualizer.cpp  Visualizer.h
src/Presets/: PresetSamples.h
src/SamplerEngine/: SamplerEngine.cpp  SamplerEngine.h
